--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Resume</title>
 </head>
 <body>
- <script src = resume.js></script>   
+ <script src = app.js></script>   
 </body>
 </html>
